--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "framer-motion": "^10.12.4",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "prettier": "^2.8.7",
